# Interviewcraft

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  fly.dev.toml  fly.staging.toml  fly.toml  repomix.config.json
backend/: .bandit.toml  .env.example  Dockerfile  alembic.ini  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_stories_table.py  003_add_user_profile.py  004_add_voice_id.py  005_add_persona.py  006_add_company.py  007_add_byok_keys.py  008_add_focus_skill.py  009_add_company_to_questions.py  010_expand_question_bank.py  011_share_cards.py  012_user_contributed_questions.py  013_more_questions.py  014_add_user_memories.py  015_add_batch_job_id_to_user_memories.py  015_add_memory_batch_job_id.py  016_add_session_duration_limit.py  017_company_intel.py  018_stories_fts_index.py
backend/app/: config.py  database.py  logging.py  main.py  redis_client.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  company_intel.py  interview_session.py  question.py  segment_score.py  session_metrics.py  share_card.py  skill_graph_node.py  story.py  usage_log.py  (+3 more)
backend/scripts/: seed_demo.py  seed_questions.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_auth_dependencies.py  test_auth_extended.py  test_contribute_questions.py  test_dashboard.py  test_delivery.py  test_digest.py  test_health.py  test_jd_analyzer.py  test_memory_extractor.py  test_negotiation.py  test_pipeline_utils.py  test_portfolio.py  test_profile_http.py  test_provider_factory.py  test_questions_http.py  test_report_generator.py  test_resume_prefill.py  test_rewind.py  test_scorer_utils.py  test_sessions.py  test_settings.py  test_share.py  test_share_http.py  test_skills.py  test_smart_pause.py  test_stories.py  test_story_extractor.py  test_voice_providers.py
(+219 files in other folders)
